--- a/src/main/resources/templates/evento/eventoFADEdit.html
+++ b/src/main/resources/templates/evento/eventoFADEdit.html
@@ -147,7 +147,7 @@
 
 								<input id="targetTableAttivitaFAD" type="text" name="target" style="display: none;" />
 								<input id="addAttivitaTo" type="text" name="addAttivitaTo" style="display: none;" />
-									
+
 								<!-- rowIndex in modifica -->
 								<input id="modificaElementoAttivitaFAD" name="modificaElemento" type="text" style="display: none;" />
 
@@ -899,7 +899,7 @@
 									</div>
 									<div th:if="${#maps.containsKey(eventoWrapper.mappaErroriValidazione, 'evento.eventoSponsorizzato')}" class="alert" th:text="#{__${eventoWrapper.mappaErroriValidazione.get('evento.eventoSponsorizzato')}__}"></div>
 								</div>
-								<div class="sponsor-si" style="display: none;">
+								<div class="sponsor-si">
 									<div class="no-padding item alert-tabella-evento form-group" th:classappend="${#maps.containsKey(eventoWrapper.mappaErroriValidazione, 'evento.sponsors')} ? 'bad'">
 										<div class="col-lg-9 col-md-11 col-sm-11 col-xs-12"></div>
 										<div th:if="${#maps.containsKey(eventoWrapper.mappaErroriValidazione, 'evento.sponsors')}" class="alert" th:text="#{__${eventoWrapper.mappaErroriValidazione.get('evento.sponsors')}__}"></div>
@@ -1267,7 +1267,7 @@
 				function closeModaleAddAttivitaTo(){
 					$("#add-attivitaFAD-modal .close").click();
 					$("#add-attivitaFAD-modal form")[0].reset();
-					
+
 					$('#tempAttivitaFAD\\.orarioInizio').val('');
 					$('#tempAttivitaFAD\\.orarioFine').val('');
 					$('#tempAttivitaFAD\\.argomento').val('');
@@ -1300,17 +1300,17 @@
 
 					$("#" + target).load(url);
 				}
-				
+
 				//modifica Attivita
 				function modificaAttivitaFrom(target,caller){
 					var modificaElemento = $(caller).parent().parent().data('row-id');
 					var programmaIndex = $(caller).parent().parent().parent().parent().parent().data('programma-id');
 					if(modificaElemento == undefined)
 						modificaElemento = 0;
-					
+
 					sendAjaxModificaAttivitaTo(target,programmaIndex,modificaElemento);
 				}
-				
+
 				function sendAjaxModificaAttivitaTo(target,programmaIndex,modificaElemento){
 					var url = [[@{|/provider/${eventoWrapper.evento.provider.id}/evento/modificaAttivita/|}]] + target + '/' + programmaIndex + '/' + modificaElemento;
 					$.get(url).done(function(data) {
