--- a/src/main/resources/templates/evento/eventoFSCEdit.html
+++ b/src/main/resources/templates/evento/eventoFSCEdit.html
@@ -142,7 +142,7 @@
 									<input id="targetTableAttivitaFSC" type="text" name="target" style="display: none;" />
 									<!-- fase a cui agganciare l'attività -->
 									<input id="addAttivitaTo" type="text" name="addAttivitaTo" style="display: none;" />
-									
+
 									<!-- rowIndex in modifica -->
 									<input id="modificaElementoAttivitaFSC" name="modificaElemento" type="text" style="display: none;" />
 								</form>
@@ -977,7 +977,7 @@
 									</div>
 									<div th:if="${#maps.containsKey(eventoWrapper.mappaErroriValidazione, 'evento.eventoSponsorizzato')}" class="alert" th:text="#{__${eventoWrapper.mappaErroriValidazione.get('evento.eventoSponsorizzato')}__}"></div>
 								</div>
-								<div class="sponsor-si" style="display: none;">
+								<div class="sponsor-si">
 									<div class="no-padding item alert-tabella-evento form-group" th:classappend="${#maps.containsKey(eventoWrapper.mappaErroriValidazione, 'evento.sponsors')} ? 'bad'">
 										<div class="col-lg-9 col-md-11 col-sm-11 col-xs-12"></div>
 										<div th:if="${#maps.containsKey(eventoWrapper.mappaErroriValidazione, 'evento.sponsors')}" class="alert" th:text="#{__${eventoWrapper.mappaErroriValidazione.get('evento.sponsors')}__}"></div>
@@ -1478,17 +1478,17 @@
 
 					$("#" + target).load(url);
 				}
-				
+
 				//modifica Attivita
 				function modificaAttivitaFrom(target,caller){
 					var modificaElemento = $(caller).parent().parent().data('row-id');
 					var programmaIndex = $(caller).parent().parent().parent().parent().parent().data('fase-id');
 					if(modificaElemento == undefined)
 						modificaElemento = 0;
-					
+
 					sendAjaxModificaAttivitaTo(target,programmaIndex,modificaElemento);
 				}
-				
+
 				function sendAjaxModificaAttivitaTo(target,programmaIndex,modificaElemento){
 					var url = [[@{|/provider/${eventoWrapper.evento.provider.id}/evento/modificaAttivita/|}]] + target + '/' + programmaIndex + '/' + modificaElemento;
 					$.get(url).done(function(data) {
@@ -1501,7 +1501,7 @@
 				    	alert( "error" );
 				 	 })
 				}
-				
+
 
 				/*parametrizzabile - è  identica a RES*/
 				function reloadSection(selectedTab){
