--- a/src/main/resources/templates/evento/eventoRESEdit.html
+++ b/src/main/resources/templates/evento/eventoRESEdit.html
@@ -1144,7 +1144,7 @@
 										</div>
 										<div th:if="${#maps.containsKey(eventoWrapper.mappaErroriValidazione, 'evento.eventoSponsorizzato')}" class="alert" th:text="#{__${eventoWrapper.mappaErroriValidazione.get('evento.eventoSponsorizzato')}__}"></div>
 									</div>
-									<div class="sponsor-si" style="display: none;">
+									<div class="sponsor-si">
 										<div class="no-padding item alert-tabella-evento form-group" th:classappend="${#maps.containsKey(eventoWrapper.mappaErroriValidazione, 'evento.sponsors')} ? 'bad'">
 											<div class="col-lg-9 col-md-11 col-sm-11 col-xs-12"></div>
 											<div th:if="${#maps.containsKey(eventoWrapper.mappaErroriValidazione, 'evento.sponsors')}" class="alert" th:text="#{__${eventoWrapper.mappaErroriValidazione.get('evento.sponsors')}__}"></div>
@@ -1779,7 +1779,7 @@
 				function closeModaleAddAttivitaTo(){
 					$("#add-attivitaRES-modal .close").click();
 					$("#add-attivitaRES-modal form")[0].reset();
-					
+
 					$('#tempAttivitaRES\\.orarioInizio').val('');
 					$('#tempAttivitaRES\\.orarioFine').val('');
 					$('#tempAttivitaRES\\.argomento').val('');
@@ -1823,7 +1823,7 @@
 					var pausa = $(caller).parent().parent().data('is-pausa');
 					if(modificaElemento == undefined)
 						modificaElemento = 0;
-					
+
 					console.log('modificaAttivitaFrom:' + target + "," + programmaIndex + ',' + pausa + ',' + modificaElemento);
 
 					sendAjaxModificaAttivitaTo(target,programmaIndex,pausa,modificaElemento);
