Gestione multi account per il provider

--- a/src/main/resources/templates/fragments/sidebarAndTop.html
+++ b/src/main/resources/templates/fragments/sidebarAndTop.html
@@ -50,6 +50,8 @@
 									<li><a th:href="@{/provider/pianoFormativo/list}" th:text="#{label.piano_formativo}">label.piano_formativo</a></li>
 									<li><a th:href="@{/comunicazione/dashboard}" th:text="#{label.comunicazioni}"></a></li>
 									<li><a th:href="@{/provider/evento/list}" th:text="#{label.eventi}"></a></li>
+
+									<li><a th:href="@{/provider/user/list}" th:text="#{label.utenti}">label.utenti</a></li>
 									<!--
 									<li><a href="#" th:text="#{label.eventi}">label.eventi</a></li>
 									<li><a href="#" th:text="#{label.relazione_annuale}">label.relazione_annuale</a></li>
