--- a/src/main/resources/templates/user/userEdit.html
+++ b/src/main/resources/templates/user/userEdit.html
@@ -79,7 +79,7 @@
 		                            <input type="checkbox" name="enabled" class="js-switch" th:value="*{enabled}" th:field="*{enabled}" /> <span th:text="#{label.enabled}">label.enabled</span>
 		                          </label>
 		                        </div>
-		                        <div class="switch-account-locked">
+		                        <div class="switch-account-locked" th:unless="${#authentication.principal.hasProfile('PROVIDER')}">
 		                          <label>
 		                             <input type="checkbox" name="locked" class="js-switch red" th:value="*{locked}" th:field="*{locked}" /> <span th:text="#{label.locked}">label.locked</span>
 		                          </label>
@@ -88,7 +88,7 @@
 		                    </div>
 		                    
 		                    <!-- Profili -->
-		                    <div class="item form-group">
+		                    <div class="item form-group" th:unless="${#authentication.principal.hasProfile('PROVIDER')}">
 		                      <label class="col-md-3 col-sm-3 col-xs-12 control-label">
 		                      	<span th:text="#{label.profili}"></span>
 		                      </label>
@@ -112,7 +112,8 @@
 		                    
 		                    <!-- Invia dati -->
 							<div class="item form-group text-right">
-								<a class="btn btn-primary right" th:href="@{/user/list}" th:text="#{label.indietro}"></a>
+								<a class="btn btn-primary right" th:href="@{/user/list}" th:text="#{label.indietro}" th:unless="${#authentication.principal.hasProfile('PROVIDER')}"></a>
+								<a class="btn btn-primary right" th:href="@{/provider/user/list}" th:text="#{label.indietro}" th:if="${#authentication.principal.hasProfile('PROVIDER')}"></a>
 								<input class="btn right btn-success" type="submit" name="save" th:value="#{label.conferma}"/>
 							</div>
 						</form>
