Integrazione MyPay pagamento Eventi Link modelli Properties Engineering

--- a/src/main/resources/templates/accreditamento/accreditamentoAllegatiFragment.html
+++ b/src/main/resources/templates/accreditamento/accreditamentoAllegatiFragment.html
@@ -43,7 +43,7 @@
 						<!-- allegato 1 (atto costitutivo e statuto) -->
 						<div th:if="${editabile}" class="model-link" id="esempio_attoCostitutivo">
 							<i class="fa fa-file-text"></i>
-							<a id="attoCostitutivo_esempio_link" th:text="#{label.esempio_modello}" th:href="@{|files/${accreditamentoAllegatiWrapper.attoCostitutivoModel}|}"></a>
+							<a id="attoCostitutivo_esempio_link" th:text="#{label.esempio_modello}" href="http://ecm.veneto.agenas.it/documenti/2.criteri_per_assegnazione_crediti_e_fsc.pdf"></a>
 						</div>
 						<th:block th:include="fragments/allegati :: allegati(accreditamentoAllegatiWrapper, true, attoCostitutivo,  ${!showOnly ? 'attoCostitutivo' : null}, null, null, true, ${mode}, true)" ></th:block>
 
@@ -51,7 +51,7 @@
 						<div th:class="${valutabile ? 'divider' : 'divider-dashed'}"></div>
 						<div th:if="${editabile}" class="model-link" id="esempio_dichiarazioneEsclusione">
 							<i class="fa fa-file-text"></i>
-							<a id="dichiarazioneEsclusione_esempio_link" th:text="#{label.esempio_modello}" th:href="@{|files/${accreditamentoAllegatiWrapper.dichiarazioneEsclusioneModel}|}"></a>
+							<a id="dichiarazioneEsclusione_esempio_link" th:text="#{label.esempio_modello}" href="http://ecm.veneto.agenas.it/documenti/15.dichiarazione_esclusione_del_conflitto_di%20interessi_per_oggetto_sociale.pdf"></a>
 						</div>
 						<th:block th:include="fragments/allegati :: allegati(accreditamentoAllegatiWrapper, true, dichiarazioneEsclusione,  ${!showOnly ? 'dichiarazioneEsclusione' : null}, null, null, true, ${mode}, false)" ></th:block>
 
@@ -59,7 +59,7 @@
 						<div th:class="${valutabile ? 'divider' : 'divider-dashed'}"></div>
 						<div th:if="${editabile}" class="model-link" id="esempio_esperienzaFormazione">
 							<i class="fa fa-file-text"></i>
-							<a id="esperienzaFormazione_esempio_link" th:text="#{label.esempio_modello}" th:href="@{|files/${accreditamentoAllegatiWrapper.esperienzaFormazioneModel}|}"></a>
+							<a id="esperienzaFormazione_esempio_link" th:text="#{label.esempio_modello}" href="http://ecm.veneto.agenas.it/documenti/2.criteri_per_assegnazione_crediti_e_fsc.pdf"></a>
 						</div>
 						<th:block th:include="fragments/allegati :: allegati(accreditamentoAllegatiWrapper, true, esperienzaFormazione,  ${!showOnly ? 'esperienzaFormazione' : null}, null, ${editabile ? #messages.msg('label.required_fatturato_personale_sanitario') : null}, true, ${mode}, false)" ></th:block>
 
@@ -67,7 +67,7 @@
 						<div th:class="${valutabile ? 'divider' : 'divider-dashed'}"></div>
 						<div th:if="${editabile}" class="model-link" id="esempio_utilizzo">
 							<i class="fa fa-file-text"></i>
-							<a id="utilizzo_esempio_link" th:text="#{label.esempio_modello}" th:href="@{|files/${accreditamentoAllegatiWrapper.utilizzoModel}|}"></a>
+							<a id="utilizzo_esempio_link" th:text="#{label.esempio_modello}" href="http://ecm.veneto.agenas.it/documenti/2.criteri_per_assegnazione_crediti_e_fsc.pdf"></a>
 						</div>
 						<th:block th:include="fragments/allegati :: allegati(accreditamentoAllegatiWrapper, true, utilizzo,  ${!showOnly ? 'utilizzo' : null}, null, null, true, ${mode}, true)" ></th:block>
 
@@ -75,7 +75,7 @@
 						<div th:class="${valutabile ? 'divider' : 'divider-dashed'}"></div>
 						<div th:if="${editabile}" class="model-link" id="esempio_sistemaInformatico">
 							<i class="fa fa-file-text"></i>
-							<a id="sistemaInformatico_esempio_link" th:text="#{label.esempio_modello}" th:href="@{|files/${accreditamentoAllegatiWrapper.sistemaInformaticoModel}|}"></a>
+							<a id="sistemaInformatico_esempio_link" th:text="#{label.esempio_modello}" href="http://ecm.veneto.agenas.it/documenti/9.sistemi_informatici.pdf"></a>
 						</div>
 						<th:block th:include="fragments/allegati :: allegati(accreditamentoAllegatiWrapper, true, sistemaInformatico,  ${!showOnly ? 'sistemaInformatico' : null}, null, null, true, ${mode}, true)" ></th:block>
 
@@ -83,7 +83,7 @@
 						<div th:class="${valutabile ? 'divider' : 'divider-dashed'}"></div>
 						<div th:if="${editabile}" class="model-link" id="esempio_pianoQualita">
 							<i class="fa fa-file-text"></i>
-							<a id="pianoQualita_esempio_link" th:text="#{label.esempio_modello}" th:href="@{|files/${accreditamentoAllegatiWrapper.pianoQualitaModel}|}"></a>
+							<a id="pianoQualita_esempio_link" th:text="#{label.esempio_modello}" href="http://ecm.veneto.agenas.it/documenti/2.criteri_per_assegnazione_crediti_e_fsc.pdf"></a>
 						</div>
 						<th:block th:include="fragments/allegati :: allegati(accreditamentoAllegatiWrapper, true, pianoQualita,  ${!showOnly ? 'pianoQualita' : null}, null, null, true, ${mode}, true)" ></th:block>
 
@@ -91,7 +91,7 @@
 						<div th:class="${valutabile ? 'divider' : 'divider-dashed'}"></div>
 						<div th:if="${editabile}" class="model-link" id="esempio_dichiarazioneLegale">
 							<i class="fa fa-file-text"></i>
-							<a id="dichiarazioneLegale_esempio_link" th:text="#{label.esempio_modello}" th:href="@{|files/${accreditamentoAllegatiWrapper.dichiarazioneLegaleModel}|}"></a>
+							<a id="dichiarazioneLegale_esempio_link" th:text="#{label.esempio_modello}" href="http://ecm.veneto.agenas.it/documenti/DICHIARAZIONE%20LEGALE%20RAPPRESENTANTE%20rev%202015.pdf"></a>
 						</div>
 						<th:block th:include="fragments/allegati :: allegati(accreditamentoAllegatiWrapper, true, dichiarazioneLegale,  ${!showOnly ? 'dichiarazioneLegale' : null}, null, null, true, ${mode}, true)" ></th:block>
 
