--- a/src/main/resources/templates/evento/eventoRESEdit.html
+++ b/src/main/resources/templates/evento/eventoRESEdit.html
@@ -220,7 +220,7 @@
 								<div class="col-xs-12 section-index" id="section-1" th:fragment="section-1">
 
 									<!-- TODO rimuovere -->
-									 <div th:text="'MAPPA ERRORI VALIDAZIONE: '+${eventoWrapper.mappaErroriValidazione}"></div>
+<!-- 									<div th:text="'MAPPA ERRORI VALIDAZIONE: '+${eventoWrapper.mappaErroriValidazione}"></div> -->
 
 									<!-- DENOMINAZIONE LEGALE PROVIDER -->
 									<div class="item form-group">
@@ -816,7 +816,7 @@
 					 					<div th:if="${#maps.containsKey(eventoWrapper.mappaErroriValidazione, 'evento.verificaApprendimento')}" class="alert" th:text="#{__${eventoWrapper.mappaErroriValidazione.get('evento.verificaApprendimento')}__}"></div>
 									</div>
 
-									 <!-- DURATA  -->
+									<!-- DURATA  -->
 									<div class="item form-group" th:classappend="${#maps.containsKey(eventoWrapper.mappaErroriValidazione, 'evento.durata')} ? 'bad'">
 					 					<label class="control-label col-xs-1">
 					 						<span>34</span>
@@ -1774,10 +1774,10 @@
 						$("#container-risultatoAtteso").show();
 						$("#container-obiettivoFormativo").show();
 						$("#container-metodologiaDidattica").show();
-						
+
 						var tipologiaEvento = $('#tipologia_evento').val();
 						var selectObiettiviFormativi = '#addAttivitaRES-obiettiviFormativi';
-						
+
 						if(tipologiaEvento == 'CONVEGNO_CONGRESSO'){
 							$("#container-risultatoAtteso").hide();
 							$.each($(selectObiettiviFormativi + " option"), function() {
@@ -1791,7 +1791,7 @@
 							});
 							$(selectObiettiviFormativi).selectpicker('refresh');
 						}
-						
+
 					}
 				}
 
