--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -1027,8 +1027,8 @@ h2 {
 	color: #FFF;
 	border-radius: 4px;
 	background-color: #CE5454;
-	max-width: 170px;
-	white-space: inherit;
+	max-width: 300px;
+	white-space: pre-line;
 	position: relative;
 	left: -15px;
 	opacity: 0;
