--- a/src/main/resources/templates/evento/eventoEdit.html
+++ b/src/main/resources/templates/evento/eventoEdit.html
@@ -757,11 +757,11 @@
 			function mostraNascondiAllegatiAutocertificazioniSponsor(value) {
 				if(value == "true") {
 					$(".infanzia-sponsor-si").slideDown("slow");
-					$(".infanzia-sponsor-no").slideUp("slow");
+					$(".infanzia-sponsor-no").slideUp("fast");
 				}
 				else {
 					$(".infanzia-sponsor-no").slideDown("slow");
-					$(".infanzia-sponsor-si").slideUp("slow");
+					$(".infanzia-sponsor-si").slideUp("fast");
 				}
 			}
 
@@ -1532,7 +1532,7 @@
 			<div id="attivitaFSC">
 				<div th:id="${'attivitaFSC-' + __${status.index}__}" class="col-xs-12" th:each="fase , status : ${eventoWrapper.programmaEventoFSC}"  th:with="fase=${eventoWrapper.programmaEventoFSC[__${status.index}__].faseDiLavoro}">
 
-					<th:block th:if="${ (eventoWrapper.evento.tipologiaEvento != T(it.tredi.ecm.dao.enumlist.TipologiaEventoFSCEnum).PROGETTI_DI_MIGLIORAMENTO) or T(it.tredi.ecm.dao.enumlist.ProgettiDiMiglioramentoFasiDaInserireFSCEnum).faseAbilitata(eventoWrapper.evento.fasiDaInserire,fase)}">
+					<th:block th:if="${(eventoWrapper.evento.tipologiaEvento != T(it.tredi.ecm.dao.enumlist.TipologiaEventoFSCEnum).PROGETTI_DI_MIGLIORAMENTO) or T(it.tredi.ecm.dao.enumlist.ProgettiDiMiglioramentoFasiDaInserireFSCEnum).faseAbilitata(eventoWrapper.evento.fasiDaInserire,fase)}">
 
 						<div class="item form-group">
 							<th:block th:if="${fase != T(it.tredi.ecm.dao.enumlist.FaseDiLavoroFSCEnum).CAMPO_LIBERO}">
@@ -1545,11 +1545,14 @@
 							</th:block>
 						</div>
 
-						<div class="col-xs-12">
-							<label th:if="${fase != T(it.tredi.ecm.dao.enumlist.FaseDiLavoroFSCEnum).CAMPO_LIBERO}" th:text="#{label.azioni} + '/' + #{label.ruoli}">Azioni / Ruoli</label>
-							<label th:if="${fase == T(it.tredi.ecm.dao.enumlist.FaseDiLavoroFSCEnum).CAMPO_LIBERO}" th:text="#{label.fasi}">Fasi</label>
-							<div th:attr="data-fase-id=__${status.index}__">
-								<table class="datatable-responsive-programmaFSC table table-striped table-bordered dt-responsive nowrap" cellspacing="0" width="100%">
+						<div class="col-xs-12 item alert-tabella-evento form-group" th:classappend="${#maps.containsKey(eventoWrapper.mappaErroriValidazione, 'programmaEventoFSC['+__${status.index}__+'].azioniRuoli')} ? 'bad'">
+							<label class="col-lg-9 col-md-11 col-sm-11 col-xs-12" th:if="${fase != T(it.tredi.ecm.dao.enumlist.FaseDiLavoroFSCEnum).CAMPO_LIBERO}" th:text="#{label.azioni} + '/' + #{label.ruoli}">Azioni / Ruoli</label>
+							<label class="col-lg-9 col-md-11 col-sm-11 col-xs-12" th:if="${fase == T(it.tredi.ecm.dao.enumlist.FaseDiLavoroFSCEnum).CAMPO_LIBERO}" th:text="#{label.fasi}">Fasi</label>
+							<div th:if="${#maps.containsKey(eventoWrapper.mappaErroriValidazione, 'programmaEventoFSC['+__${status.index}__+'].azioniRuoli')}" class="alert" th:text="#{__${eventoWrapper.mappaErroriValidazione.get('programmaEventoFSC['+status.index+'].azioniRuoli')}__}"></div>
+							<div class="item form-group" style="clear:both; padding:2px;"></div>
+							<div th:attr="data-fase-id=__${status.index}__" class="item form-group" style="clear:both">
+								<table class="datatable-responsive-programmaFSC table table-striped table-bordered dt-responsive nowrap" cellspacing="0" width="100%"
+									th:classappend="${#maps.containsKey(eventoWrapper.mappaErroriValidazione, 'programmaEventoFSC['+__${status.index}__+'].azioniRuoli')} ? 'bad-table'">
 									<thead>
 										<tr>
 											<th th:if="${fase != T(it.tredi.ecm.dao.enumlist.FaseDiLavoroFSCEnum).CAMPO_LIBERO}" th:text="#{label.azione}">AZIONE</th>
@@ -1567,11 +1570,12 @@
 										</tr>
 									</thead>
 									<tbody>
-										<tr th:attr="data-row-id=${__${status2.index}__}" th:each="attivita , status2 : ${eventoWrapper.programmaEventoFSC[__${status.index}__].azioniRuoli}">
+										<tr th:attr="data-row-id=${__${status2.index}__}"
+											th:each="attivita , status2 : ${eventoWrapper.programmaEventoFSC[__${status.index}__].azioniRuoli}"
+											th:classappend="${#maps.containsKey(eventoWrapper.mappaErroriValidazione, 'programmaEventoFSC['+__${status.index}__+'].azioniRuoli['+__${status2.index}__+']')} ? 'bad-row'">
 											<td th:text="${eventoWrapper.programmaEventoFSC[__${status.index}__].azioniRuoli[__${status2.index}__].azione}"></td>
 											<td th:text="${eventoWrapper.programmaEventoFSC[__${status.index}__].azioniRuoli[__${status2.index}__].obiettivoFormativo?.nome}"></td>
 											<td th:text="${eventoWrapper.programmaEventoFSC[__${status.index}__].azioniRuoli[__${status2.index}__].risultatiAttesi}"></td>
-
 											<td>
 												<ul>
 													<li th:each="metodo, m : ${eventoWrapper.programmaEventoFSC[__${status.index}__].azioniRuoli[__${status2.index}__].metodiDiLavoro}">
