--- a/src/main/resources/templates/evento/eventoList.html
+++ b/src/main/resources/templates/evento/eventoList.html
@@ -94,7 +94,7 @@
 					<div class="x_title">
 						<h2 th:text="${denominazioneProvider != null} ? #{label.lista_eventi_provider(${denominazioneProvider})} : #{label.lista_eventi}">Lista degli eventi</h2>
 						<div class="pull-right buttons-header">
-
+								<a th:href="@{}"></a>
 							<div class="dropdown pull-right">
   								<button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown" th:if="${canCreateEvento}">
 									<span th:text="#{label.nuovo_evento}"></span>
@@ -138,7 +138,8 @@
 									<td th:text="${evento.proceduraFormativa.nome}"></td>
 									<td th:text="${#numbers.formatDecimal(evento.costo, 1, 'POINT', 2, 'COMMA')}"></td>
 									<td th:if="${evento.pagato}"><span class="label-pagato" th:text="#{label.pagato}"></span></td>
-									<td th:unless="${evento.pagato}"><span class="label-non-pagato" th:text="#{label.pagInCorso}"></span></td>
+									<td th:if="${evento.pagInCorso}"><span class="label-non-pagato" th:text="#{label.pagInCorso}"></span></td>
+									<td th:if="${!evento.pagato and !evento.pagInCorso}"><span class="label-non-pagato" th:text="#{label.da_pagare}"></span></td>
 									<td th:text="${evento.dataScadenzaPagamento == null} ? '' : ${#temporals.format(evento.dataScadenzaPagamento, 'dd/MM/yyyy')}"></td>
 									<td>
 										<div class="button-container single">
