--- a/src/main/resources/templates/provider/pagamentoList.html
+++ b/src/main/resources/templates/provider/pagamentoList.html
@@ -10,8 +10,10 @@
 			<div class="col-xs-12">
 				<div class="x_panel">
 					<div class="x_title">
-						<h2 th:text="#{label.elenco_pagamenti}">Elenco Pagamenti</h2>
+						<h2 th:text="#{label.pagamenti_annuali}">Elenco Pagamenti</h2>
 						<div class="clearfix"></div>
+						<a class="btn btn-primary" th:href="@{|/provider/${providerId}/pagamento/inserisci|}">Inserisci pagamento</a>
+						<a class="btn btn-primary" th:href="@{|/provider/${providerId}/pagamento/verifica|}">Verifica Pagamento</a>
 					</div>
 					<div class="x_content">
 						<table th:unless="${#lists.isEmpty(pagamentoList)}" id="datatable-pagamentiProvider" class="table table-striped table-bordered dt-responsive nowrap datatable-responsive" cellspacing="0" width="100%">
@@ -28,8 +30,15 @@
 								<tr th:each="pagamento : ${pagamentoList}">
 									<td th:text="${pagamento.causale}">3d informatica</td>
 									<td th:text="${pagamento.importo}">informatica</td>
-									<td th:text="${pagamento.dataScadenzaPagamento}">stato</td>
-									<td th:text="${pagamento.dataEsito}">abilitato/non abilitato</td>
+									<td th:text="${#temporals.format(pagamento.dataScadenzaPagamento,'dd/MM/yyyy')}">stato</td>
+									<td th:text="${pagamento.dataEsitoSingoloPagamento != null ? #temporals.format(pagamento.dataEsitoSingoloPagamento,'dd/MM/yyyy') : ''}">abilitato/non abilitato</td>
+									<td th:if="${pagamento.codiceEsito == T(it.tredi.ecm.service.EngineeringServiceImpl).PAGAMENTO_ESEGUITO}">
+										<span th:text="#{label.pagato}" class="label-pagato"></span>
+									</td>
+									<td th:unless="${pagamento.codiceEsito == T(it.tredi.ecm.service.EngineeringServiceImpl).PAGAMENTO_ESEGUITO}">
+										<span th:text="#{label.da_pagare}" class="label-non-pagato"></span>
+									</td>
+									
 									<td th:text="${pagamento.esitoSingoloPagamento}">abilitato/non abilitato</td>
 								</tr>
 							</tbody>
